--- a/package.json
+++ b/package.json
@@ -36,15 +36,22 @@
     "chart.js": "2.7.1",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
+    "globalize": "^1.3.0",
     "history": "4.7.2",
+    "moment": "^2.20.1",
     "react": "16.2.0",
     "react-addons-linked-state-mixin": "^15.6.2",
     "react-chartjs-2": "2.7.0",
+    "react-datetime": "^2.11.1",
     "react-dom": "16.2.0",
     "react-modal": "^3.1.11",
     "react-modal-dialog": "^4.0.7",
     "react-router-dom": "4.2.2",
     "react-transition-group": "2.2.1",
+    "react-widgets": "^4.1.1",
+    "react-widgets-globalize": "^4.0.4",
+    "react-widgets-moment": "^4.0.4",
+    "react-widgets-moment-localizer": "^1.0.2",
     "reactstrap": "5.0.0-alpha.4",
     "simple-line-icons": "2.4.1"
   },
